# deep-apartment-finder

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.conductor/: settings.toml
docs/: ROADMAP.md  SPRINT1.md  SPRINT2.md  SPRINT3.md  SPRINT4.md  SPRINT5.md
docs/adr/: 001-framework-deep-agents.md  002-llm-groq-and-opencode-fallback.md  003-database-postgres-pgvector.md  004-execution-agent-driven-diy-scraping.md  005-per-subagent-filesystem.md  006-researcher-and-dangerous-neighborhoods.md  007-haversine-distance-provider.md  008-gmail-smtp-notifier.md  009-observability-run-observer-and-langsmith.md  010-listing-data-quality-coordinates-and-backfill.md  011-second-scraper-idealista-stealth-strategy.md  012-cross-portal-dedup-key.md  013-parallel-scraper-execution.md
scripts/: ingest_fotocasa_headless.py  smoke_fotocasa.py
src/deep_apartment_finder/: __main__.py  cli.py  config.py  llm.py  main.py
src/deep_apartment_finder/adapters/distance/: haversine.py
src/deep_apartment_finder/adapters/notifiers/: gmail_smtp.py
src/deep_apartment_finder/adapters/observability/: cli_observer.py  recording_observer.py  tracing.py
src/deep_apartment_finder/adapters/postgres/: connection.py  dangerous_neighborhood_repository.py  migrations.py  ranking_repository.py  repository.py  run_report_repository.py
src/deep_apartment_finder/adapters/postgres/migrations/: 001_init_apartments.sql  002_sprint2.sql  003_sprint3.sql  004_fix_furnished_check.sql
src/deep_apartment_finder/adapters/scrapers/: base.py
src/deep_apartment_finder/adapters/scrapers/fotocasa/: api.py  client.py  listing_parser.py  scraper.py  selectors.py
src/deep_apartment_finder/adapters/scrapers/idealista/: __init__.py  api.py  client.py  detail_client.py  scraper.py  selectors.py
src/deep_apartment_finder/agent/: orchestrator.py
src/deep_apartment_finder/domain/: apartment.py  geo.py  notifier.py  ranking.py  run_report.py  source.py
src/deep_apartment_finder/domain/filters/: hard.py
src/deep_apartment_finder/domain/soft_criteria/: __init__.py  distance_to_dangerous.py  furnished.py  pet_policy.py  registry.py
src/deep_apartment_finder/filesystem/: routes.py
src/deep_apartment_finder/ports/: apartment_repository.py  dangerous_neighborhood_repository.py  distance_provider.py  notifier.py  ranking_repository.py  run_observer.py  scraper.py
src/deep_apartment_finder/subagents/: fotocasa_scraper.py  idealista_scraper.py  researcher.py
src/deep_apartment_finder/subagents/prompts/: fotocasa_scraper.md  idealista_scraper.md  orchestrator.md  researcher.md
src/deep_apartment_finder/tools/: __init__.py  ingest.py  listing_payload.py
src/deep_apartment_finder/tools/fotocasa/: __init__.py  fetch_listing.py  save_snapshot.py  search_listings.py
src/deep_apartment_finder/tools/idealista/: __init__.py  fetch_listing.py  save_snapshot.py  search_listings.py
src/deep_apartment_finder/tools/orchestrator/: run_scrapers.py
src/deep_apartment_finder/tools/researcher/: count_neighborhoods.py  upsert_neighborhoods.py  web_search.py
tests/: _fakes.py  conftest.py
tests/fixtures/idealista/: detail_page1.html  search_page1.html  search_page2.html
tests/integration/: test_orchestrator_subagent.py  test_sprint2_pipeline.py  test_sprint3_pipeline.py  test_sprint4_pipeline.py
tests/unit/: test_apartment.py  test_fake_scraper.py  test_filesystem_routes.py  test_fotocasa_parser.py  test_fotocasa_scraper.py  test_geo.py  test_gmail_smtp_notifier.py  test_hard_filters.py  test_idealista_detail_client.py  test_idealista_detail_parser.py  test_idealista_parser.py  test_idealista_scraper.py  test_idealista_scraper_detail.py  test_inmemory_repository.py  test_llm_router.py  test_main.py  test_migrations.py  test_notifier.py  test_observers.py  test_orchestrator_dual_scraper.py  test_orchestrator_observer.py  test_postgres_repository.py  test_ranking.py  test_ranking_repository.py  test_researcher_tools.py  test_run_report.py  test_run_scrapers.py  test_soft_criteria.py  test_tools.py  test_tracing.py  test_web_search_tool.py
(+6 files in other folders)
