[project]
name = "deep-apartment-finder"
version = "0.1.0"
description = "Agent-driven Zaragoza apartment finder (Sprint 4: Idealista detail-page upgrade + parallel scraper execution)."
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
  # Agent layer — Deep Agents harness (orchestrator + subagents).
  # Pinned to the latest stable that supports LangChain 1.x; every published
  # deepagents release (including 0.7.0 alphas) requires Python >=3.11.
  "deepagents>=0.6.12,<0.7",
  "langchain>=1.0,<2.0",
  "langchain-core>=1.0,<2.0",
  "langsmith>=0.3.0",

  # Model providers — Groq primary, OpenAI-compatible (opencode-go) fallback
  "langchain-groq",
  "langchain-openai",

  # Config
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",

  # CLI
  "typer>=0.12",

  # Database
  "asyncpg>=0.29",

  # HTTP + HTML parsing (Fotocasa)
  "httpx>=0.27",
  "selectolax>=0.3.21",
  # TLS/HTTP2 fingerprint impersonation (Idealista — DataDome-protected
  # search pages require a real-browser ciphersuite and TLS profile. Plain
  # `httpx` is 403'd; `curl_cffi` impersonating `chrome131` returns the
  # SSR'd search HTML. Detail pages are still blocked for non-browser
  # clients; the adapter degrades gracefully to card-only data.)
  "curl-cffi>=0.15.0",

  # CSR fallback (optional at runtime; needed for the `playwright` path)
  "playwright>=1.43",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.10",
  "langsmith[pytest]>=0.3.4",
]

[project.scripts]
deep-apartment-finder = "deep_apartment_finder.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deep_apartment_finder"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# Test fixtures embed real-world HTML / JSON-LD strings that are
# intentionally compact and read better on one line. The line-length
# rule is for *production* code.
"tests/**" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
# Sprint 1 keeps mypy at a pragmatic strictness level. Sprint 5 hardening
# will turn `strict = true` on and resolve the remaining per-file ignores.
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true

[[tool.mypy.overrides]]
# asyncpg has no type stubs; we trust the calls we make and use `# type: ignore`
# at the call sites instead of forcing the user to install `types-asyncpg`.
module = "asyncpg"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# deepagents is in beta and its subagent typing doesn't accept plain dicts
# even though the docs show that pattern. We use the dict shape and
# suppress at the call site.
module = "deepagents.*"
ignore_errors = true

[[tool.mypy.overrides]]
# Pytest functions and small fakes are intentionally not part of the strict
# production typing gate.
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
# `RunObserver` is a runtime-checkable Protocol; mypy doesn't fully
# support `**kwargs`-style attribute dispatch through it. The adapters
# (`CliRunObserver`, `RecordingRunObserver`) implement every method
# declared in the Protocol; the runtime tests cover it.
module = "deep_apartment_finder.adapters.observability"
ignore_errors = true

[[tool.mypy.overrides]]
# The CLI consumes the `RunObserver` Protocol; the `end_phase`
# signature uses keyword-only arguments and the Protocol stubs
# don't fully express it. The runtime tests in
# `tests/unit/test_observers.py` cover the call site.
module = "deep_apartment_finder.cli"
ignore_errors = true

[[tool.mypy.overrides]]
# The orchestrator's `_DeterministicSteps` consumes the
# `RunObserver` Protocol; same reason as the CLI override above.
module = "deep_apartment_finder.agent.orchestrator"
ignore_errors = true
